gen/MicroSchemeParser.java
// Generated from C:/Users/Joshua/Desktop/Files/Java/MicroScheme/src/main/antlr4/com/joshuacrotts/microscheme\MicroScheme.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MicroSchemeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACE=1, COMMENT=2, OPEN_PAREN=3, CLOSE_PAREN=4, OPEN_BRACKET=5, 
		CLOSE_BRACKET=6, SINGLE_QUOTE=7, BACK_TICK=8, COMMA=9, HASH=10, ATSIGN=11, 
		PERIOD=12, NUMBERLIT=13, STRINGLIT=14, CHARLIT=15, BOOLLIT=16, DEFINE=17, 
		IF=18, COND=19, OR=20, AND=21, ELSE=22, LAMBDA=23, BEGIN=24, QUOTE=25, 
		UNQUOTE=26, UNQUOTESPLICING=27, WHEN=28, UNLESS=29, APPLY=30, EVAL=31, 
		DO=32, LET=33, LETSTAR=34, LETREC=35, SET=36, SETCAR=37, SETCDR=38, SETVECTOR=39, 
		ID=40;
	public static final int
		RULE_microScheme = 0, RULE_variableDeclaration = 1, RULE_variableBody = 2, 
		RULE_procedureDeclaration = 3, RULE_procedureParameters = 4, RULE_procedureBody = 5, 
		RULE_declExpr = 6, RULE_expr = 7, RULE_beginExpr = 8, RULE_booleanExpr = 9, 
		RULE_evalExpr = 10, RULE_applyExpr = 11, RULE_whenExpr = 12, RULE_whenCond = 13, 
		RULE_unlessExpr = 14, RULE_unlessCond = 15, RULE_setExpr = 16, RULE_setListExpr = 17, 
		RULE_letExpr = 18, RULE_letStarExpr = 19, RULE_letRecExpr = 20, RULE_letParameters = 21, 
		RULE_letBody = 22, RULE_lambdaExpr = 23, RULE_lambdaParameters = 24, RULE_lambdaBody = 25, 
		RULE_doExpr = 26, RULE_doDecl = 27, RULE_doTest = 28, RULE_doTrueExpr = 29, 
		RULE_doBody = 30, RULE_condExpr = 31, RULE_condForm = 32, RULE_ifExpr = 33, 
		RULE_applicationExpr = 34, RULE_applicationArgs = 35, RULE_symbolExpr = 36, 
		RULE_symbolDatum = 37, RULE_symbolDatumRep = 38, RULE_quasiSymbolExpr = 39, 
		RULE_quasiSymbolDatum = 40, RULE_quasiSymbolDatumRep = 41, RULE_constant = 42, 
		RULE_variable = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"microScheme", "variableDeclaration", "variableBody", "procedureDeclaration", 
			"procedureParameters", "procedureBody", "declExpr", "expr", "beginExpr", 
			"booleanExpr", "evalExpr", "applyExpr", "whenExpr", "whenCond", "unlessExpr", 
			"unlessCond", "setExpr", "setListExpr", "letExpr", "letStarExpr", "letRecExpr", 
			"letParameters", "letBody", "lambdaExpr", "lambdaParameters", "lambdaBody", 
			"doExpr", "doDecl", "doTest", "doTrueExpr", "doBody", "condExpr", "condForm", 
			"ifExpr", "applicationExpr", "applicationArgs", "symbolExpr", "symbolDatum", 
			"symbolDatumRep", "quasiSymbolExpr", "quasiSymbolDatum", "quasiSymbolDatumRep", 
			"constant", "variable"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'('", "')'", "'['", "']'", "'''", "'`'", "','", "'#'", 
			"'@'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WHITESPACE", "COMMENT", "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACKET", 
			"CLOSE_BRACKET", "SINGLE_QUOTE", "BACK_TICK", "COMMA", "HASH", "ATSIGN", 
			"PERIOD", "NUMBERLIT", "STRINGLIT", "CHARLIT", "BOOLLIT", "DEFINE", "IF", 
			"COND", "OR", "AND", "ELSE", "LAMBDA", "BEGIN", "QUOTE", "UNQUOTE", "UNQUOTESPLICING", 
			"WHEN", "UNLESS", "APPLY", "EVAL", "DO", "LET", "LETSTAR", "LETREC", 
			"SET", "SETCAR", "SETCDR", "SETVECTOR", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MicroScheme.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MicroSchemeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MicroSchemeContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public MicroSchemeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_microScheme; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroSchemeListener ) ((MicroSchemeListener)listener).enterMicroScheme(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroSchemeListener ) ((MicroSchemeListener)listener).exitMicroScheme(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroSchemeVisitor ) return ((MicroSchemeVisitor<? extends T>)visitor).visitMicroScheme(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MicroSchemeContext microScheme() throws RecognitionException {
		MicroSchemeContext _localctx = new MicroSchemeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_microScheme);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPEN_PAREN) | (1L << SINGLE_QUOTE) | (1L << BACK_TICK) | (1L << NUMBERLIT) | (1L << STRINGLIT) | (1L << CHARLIT) | (1L << BOOLLIT) | (1L << QUOTE) | (1L << ID))) != 0)) {
				{
				{
				setState(88);
				expr();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public TerminalNode OPEN_PAREN() { return getToken(MicroSchemeParser.OPEN_PAREN, 0); }
		public TerminalNode DEFINE() { return getToken(MicroSchemeParser.DEFINE, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public VariableBodyContext variableBody() {
			return getRuleContext(VariableBodyContext.class,0);
		}
		public TerminalNode CLOSE_PAREN() { return getToken(MicroSchemeParser.CLOSE_PAREN, 0); }
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroSchemeListener ) ((MicroSchemeListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroSchemeListener ) ((MicroSchemeListener)listener).exitVariableDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroSchemeVisitor ) return ((MicroSchemeVisitor<? extends T>)visitor).visitVariableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_variableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(OPEN_PAREN);
			setState(95);
			match(DEFINE);
			setState(96);
			variable();
			setState(97);
			variableBody();
			setState(98);
			match(CLOSE_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableBodyContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public VariableBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroSchemeListener ) ((MicroSchemeListener)listener).enterVariableBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroSchemeListener ) ((MicroSchemeListener)listener).exitVariableBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroSchemeVisitor ) return ((MicroSchemeVisitor<? extends T>)visitor).visitVariableBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableBodyContext variableBody() throws RecognitionException {
		VariableBodyContext _localctx = new VariableBodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variableBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(100);
				expr();
				}
				}
				setState(103); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPEN_PAREN) | (1L << SINGLE_QUOTE) | (1L << BACK_TICK) | (1L << NUMBERLIT) | (1L << STRINGLIT) | (1L << CHARLIT) | (1L << BOOLLIT) | (1L << QUOTE) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcedureDeclarationContext extends ParserRuleContext {
		public List<TerminalNode> OPEN_PAREN() { return getTokens(MicroSchemeParser.OPEN_PAREN); }
		public TerminalNode OPEN_PAREN(int i) {
			return getToken(MicroSchemeParser.OPEN_PAREN, i);
		}
		public TerminalNode DEFINE() { return getToken(MicroSchemeParser.DEFINE, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ProcedureParametersContext procedureParameters() {
			return getRuleContext(ProcedureParametersContext.class,0);
		}
		public List<TerminalNode> CLOSE_PAREN() { return getTokens(MicroSchemeParser.CLOSE_PAREN); }
		public TerminalNode CLOSE_PAREN(int i) {
			return getToken(MicroSchemeParser.CLOSE_PAREN, i);
		}
		public ProcedureBodyContext procedureBody() {
			return getRuleContext(ProcedureBodyContext.class,0);
		}
		public TerminalNode PERIOD() { return getToken(MicroSchemeParser.PERIOD, 0); }
		public ProcedureDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedureDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroSchemeListener ) ((MicroSchemeListener)listener).enterProcedureDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroSchemeListener ) ((MicroSchemeListener)listener).exitProcedureDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroSchemeVisitor ) return ((MicroSchemeVisitor<? extends T>)visitor).visitProcedureDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcedureDeclarationContext procedureDeclaration() throws RecognitionException {
		ProcedureDeclarationContext _localctx = new ProcedureDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_procedureDeclaration);
		try {
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(105);
				match(OPEN_PAREN);
				setState(106);
				match(DEFINE);
				setState(107);
				match(OPEN_PAREN);
				setState(108);
				variable();
				setState(109);
				procedureParameters();
				setState(110);
				match(CLOSE_PAREN);
				setState(111);
				procedureBody();
				setState(112);
				match(CLOSE_PAREN);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(114);
				match(OPEN_PAREN);
				setState(115);
				match(DEFINE);
				setState(116);
				match(OPEN_PAREN);
				setState(117);
				variable();
				setState(118);
				match(PERIOD);
				setState(119);
				procedureParameters();
				setState(120);
				match(CLOSE_PAREN);
				setState(121);
				procedureBody();
				setState(122);
				match(CLOSE_PAREN);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcedureParametersContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ProcedureParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedureParameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroSchemeListener ) ((MicroSchemeListener)listener).enterProcedureParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroSchemeListener ) ((MicroSchemeListener)listener).exitProcedureParameters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroSchemeVisitor ) return ((MicroSchemeVisitor<? extends T>)visitor).visitProcedureParameters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcedureParametersContext procedureParameters() throws RecognitionException {
		ProcedureParametersContext _localctx = new ProcedureParametersContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_procedureParameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPEN_PAREN) | (1L << SINGLE_QUOTE) | (1L << BACK_TICK) | (1L << NUMBERLIT) | (1L << STRINGLIT) | (1L << CHARLIT) | (1L << BOOLLIT) | (1L << QUOTE) | (1L << ID))) != 0)) {
				{
				{
				setState(126);
				expr();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcedureBodyContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ProcedureBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedureBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroSchemeListener ) ((MicroSchemeListener)listener).enterProcedureBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroSchemeListener ) ((MicroSchemeListener)listener).exitProcedureBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroSchemeVisitor ) return ((MicroSchemeVisitor<? extends T>)visitor).visitProcedureBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcedureBodyContext procedureBody() throws RecognitionException {
		ProcedureBodyContext _localctx = new ProcedureBodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_procedureBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(132);
				expr();
				}
				}
				setState(135); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPEN_PAREN) | (1L << SINGLE_QUOTE) | (1L << BACK_TICK) | (1L << NUMBERLIT) | (1L << STRINGLIT) | (1L << CHARLIT) | (1L << BOOLLIT) | (1L << QUOTE) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclExprContext extends ParserRuleContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public ProcedureDeclarationContext procedureDeclaration() {
			return getRuleContext(ProcedureDeclarationContext.class,0);
		}
		public DeclExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroSchemeListener ) ((MicroSchemeListener)listener).enterDeclExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroSchemeListener ) ((MicroSchemeListener)listener).exitDeclExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroSchemeVisitor ) return ((MicroSchemeVisitor<? extends T>)visitor).visitDeclExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclExprContext declExpr() throws RecognitionException {
		DeclExprContext _localctx = new DeclExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declExpr);
		try {
			setState(139);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				variableDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				procedureDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public DeclExprContext declExpr() {
			return getRuleContext(DeclExprContext.class,0);
		}
		public BeginExprContext beginExpr() {
			return getRuleContext(BeginExprContext.class,0);
		}
		public EvalExprContext evalExpr() {
			return getRuleContext(EvalExprContext.class,0);
		}
		public ApplyExprContext applyExpr() {
			return getRuleContext(ApplyExprContext.class,0);
		}
		public WhenExprContext whenExpr() {
			return getRuleContext(WhenExprContext.class,0);
		}
		public UnlessExprContext unlessExpr() {
			return getRuleContext(UnlessExprContext.class,0);
		}
		public SetExprContext setExpr() {
			return getRuleContext(SetExprContext.class,0);
		}
		public SetListExprContext setListExpr() {
			return getRuleContext(SetListExprContext.class,0);
		}
		public LetExprContext letExpr() {
			return getRuleContext(LetExprContext.class,0);
		}
		public LetStarExprContext letStarExpr() {
			return getRuleContext(LetStarExprContext.class,0);
		}
		public LetRecExprContext letRecExpr() {
			return getRuleContext(LetRecExprContext.class,0);
		}
		public LambdaExprContext lambdaExpr() {
			return getRuleContext(LambdaExprContext.class,0);
		}
		public BooleanExprContext booleanExpr() {
			return getRuleContext(BooleanExprContext.class,0);
		}
		public CondExprContext condExpr() {
			return getRuleContext(CondExprContext.class,0);
		}
		public IfExprContext ifExpr() {
			return getRuleContext(IfExprContext.class,0);
		}
		public DoExprContext doExpr() {
			return getRuleContext(DoExprContext.class,0);
		}
		public SymbolExprContext symbolExpr() {
			return getRuleContext(SymbolExprContext.class,0);
		}
		public QuasiSymbolExprContext quasiSymbolExpr() {
			return getRuleContext(QuasiSymbolExprContext.class,0);
		}
		public ApplicationExprContext applicationExpr() {
			return getRuleContext(ApplicationExprContext.class,0);
		}
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroSchemeListener ) ((MicroSchemeListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroSchemeListener ) ((MicroSchemeListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroSchemeVisitor ) return ((MicroSchemeVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}
